--- a/public/docs.html
+++ b/public/docs.html
@@ -46,7 +46,7 @@
             position: fixed;
             top: 0; left: 0; width: 100%; height: 100%;
             z-index: -50;
-            background-image: url('https://c.termai.cc/i181/aGwK.png'), url('https://c.termai.cc/i155/wbV.jpg');
+            background-image: url('https://files.catbox.moe/5rwd4q.jpeg'), url('https://c.termai.cc/i155/wbV.jpg');
             background-position: bottom right, center center;
             /* EDIT: Ukuran bunga diperbesar jadi 85% */
             background-size: 85% auto, cover;
